Fixed tests. Refactoring